# gm82alpha

./: .gitignore  CMakeLists.txt  README.md  build.bat  desktop.ini  gm82alpha.c  gm82alpha.gej  gm82alpha.gml  johnny.cfg
.github/workflows/: build-gex.yml
